toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__sync_root_project_reference__adds_project_as_ref_with_custom_options.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
expression: "fs::read_file(sandbox.path().join(\"tsconfig.root.json\")).unwrap()"
---
{
  "files": [],
  "references": [
    {
      "path": "./no-refs/tsconfig.ref.json"
    }
  ]
}
