toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__sync_root_project_reference__works_with_root_dir.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
expression: "fs::read_file(sandbox.path().join(\"root/tsconfig.json\")).unwrap()"
---
{
  "files": [],
  "references": [
    {
      "path": "../no-refs"
    }
  ]
}
